[gd_scene load_steps=2 format=3 uid="uid://d0mn0qvsneih5"]

[ext_resource type="Script" uid="uid://d1ymtpr44651y" path="res://scripts/chat_ui.gd" id="1_ausui"]

[node name="ChatUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ausui")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -210.0
offset_right = 410.0
offset_bottom = -10.0

[node name="ChatDisplay" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true

[node name="InputContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ChatInput" type="LineEdit" parent="VBoxContainer/InputContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type a message..."
max_length = 200

[node name="SendButton" type="Button" parent="VBoxContainer/InputContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Send"
